--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <!--Custom style for this template-->
-    <link rel="stylesheet" href="./Bootstrap example.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   
