--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
+            <div class="profile-pic">
+                <img src="./images/Me nb JPEG.png" alt="small profile pic" width="90" height="90" >
+              </div>
             <a class="nav-link" href="#"><i class="bi bi-emoji-smile"></i>Welcome <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
