--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #92CCCE;">
       <a class="navbar-brand" href="#">Marlena Downer</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,9 +24,9 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <div class="profile-pic">
-                <img src="./images/Me nb JPEG.png" alt="small profile pic" width="90" height="90" >
+                <img src="./images/Me nb JPEG.png" alt="small profile pic" >
               </div>
-            <a class="nav-link" href="#"><i class="bi bi-emoji-smile"></i>Welcome <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#"><i class="bi bi-emoji-smile"></i>Welcome</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"><i class="bi bi-card-heading"></i>Work</a>
