--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #92CCCE;">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #92CCCE;">
       <a class="navbar-brand" href="#">Marlena Downer</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -45,6 +45,21 @@
     </nav>
 
       <!--Hero section/jumbotron-->
+
+      <section>
+        <div class="container-full-bg">
+            <div class="jumbotron-fluid">
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                      <h1 class="display-4">Fluid jumbotron</h1>
+                      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                    </div>
+                  </div>
+
+            </div>
+        </div>
+      </section>
+
 
       <!--Skill section-  List out the skills I expect to learn from the bootcamp-->
 
