--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <body>
     <!--Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #92CCCE;">
-      <a class="navbar-brand" href="#">Marlena Downer</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,6 +25,7 @@
             <div class="profile-pic">
                 <img src="./images/Me nb JPEG.png" alt="small profile pic" >
               </div>
+              <a class="navbar-brand" href="#">Marlena Downer</a>
             <a class="nav-link" href="#"><i class="bi bi-emoji-smile"></i>Welcome</a>
           </li>
           <li class="nav-item">
@@ -51,14 +51,15 @@
             <div class="jumbotron-fluid">
                 <div class="jumbotron jumbotron-fluid">
                     <div class="container">
-                      <h1 class="display-4">Fluid jumbotron</h1>
-                      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                        <div class="d=flex">
+                      <h1 class="display-4">Marlena Downer</h1>
+                      <p class="lead">Front End Web Developer</p>
                       <hr class="my 4">
-                      <p>It uses utility classes for typography and spacing to space content out within the larger container.<p>
                         <a class="btn btn-primary btn-lg" herf="#" role="button">Learn more</a>
+                        </div>
                     </div>
                   </div>
-
+                </div>
             </div>
         </div>
       </section>
