centered wording and picture on jumo pic

--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
             <div class="jumbotron-fluid">
                 <div class="jumbotron jumbotron-fluid">
                     <div class="container">
-                        <div class="d=flex">
                       <h1 class="display-4">Marlena Downer</h1>
-                      <p class="lead">Front End Web Developer</p>
-                      <hr class="my 4">
+                      <p>Front End Web Developer</p>
+                      <hr class="my 4" id="line">
                         <a class="btn btn-primary btn-lg" herf="#" role="button">Learn more</a>
+                        <div class="big-picture">
+                            <img src="./images/jambo pic.jpg" id="big pic"  alt="big profile-pic pic for jumbotron">
+                        </div>
                         </div>
                     </div>
                   </div>
