changed picture position and worked on nav bar

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+    <div class="nav-container">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item active">
             <div class="profile-pic">
                 <img src="./images/Me nb JPEG.png" alt="small profile pic" >
@@ -42,6 +43,7 @@
           </li>
         </ul>
       </div>
+  </div>
     </nav>
 
       <!--Hero section/jumbotron-->
@@ -50,18 +52,18 @@
         <div class="container-full-bg">
             <div class="jumbotron-fluid">
                 <div class="jumbotron jumbotron-fluid">
-                    <div class="container">
-                      <h1 class="display-4">Marlena Downer</h1>
+                  <div class="container"> 
+                    <div> 
+                      <h1>Marlena Downer</h1>
                       <p>Front End Web Developer</p>
                       <hr class="my 4" id="line">
                         <a class="btn btn-primary btn-lg" herf="#" role="button">Learn more</a>
-                        <div class="big-picture">
+                    </div>
+                        <div class="bigpicture">
                             <img src="./images/jambo pic.jpg" id="big pic"  alt="big profile-pic pic for jumbotron">
-                        </div>
                         </div>
                     </div>
                   </div>
-                </div>
             </div>
         </div>
       </section>
@@ -69,8 +71,91 @@
 
       <!--Skill section-  List out the skills I expect to learn from the bootcamp-->
 
+      <div class="card">
+      <div class="card-group">
+        <div class="card">
+          <img class="card-img-top" src="" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
       <!--Work section ie the projects I have done-->
 
+      <div class="card mb-3">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card work">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+        <img class="card-img-bottom" src="..." alt="Card image cap">
+      </div>
+
+      <div class="card mb-3">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card work">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+        <img class="card-img-bottom" src="..." alt="Card image cap">
+      </div>
+
+      <div class="card mb-3">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card work">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+        <img class="card-img-bottom" src="..." alt="Card image cap">
+      </div>
+      
       <!---About me/resume-->
 
       <!---Footer- git icon-->
