--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #92CCCE;">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -53,7 +53,7 @@
             <div class="jumbotron-fluid">
                 <div class="jumbotron jumbotron-fluid">
                   <div class="container"> 
-                    <div> 
+                    <div> <!--added h1 p hr and button into div tags so that the container can be controlled, .container in css added display:flex;-->
                       <h1>Marlena Downer</h1>
                       <p>Front End Web Developer</p>
                       <hr class="my 4" id="line">
@@ -70,8 +70,7 @@
 
 
       <!--Skill section-  List out the skills I expect to learn from the bootcamp-->
-
-      <div class="card">
+      
       <div class="card-group">
         <div class="card">
           <img class="card-img-top" src="" alt="Card image cap">
