added into to jumbo and CTA

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                       <h1>Marlena Downer</h1>
                       <p>Front End Web Developer</p>
                       <hr class="my 4" id="line">
-                        <a class="btn btn-primary btn-lg" herf="#" role="button">Learn more</a>
+                      <div class="intro">I’m currently taking a 16-week bootcamp in Front-End Web Development. As a resilient individual, I believe hard work pays off!</div>
+                        <a class="btn btn-primary btn-lg" herf="#" role="button">Projects</a>
                     </div>
                         <div class="bigpicture">
                             <img src="./images/jambo pic.jpg" id="big pic"  alt="big profile-pic pic for jumbotron">
@@ -70,7 +71,7 @@
 
 
       <!--Skill section-  List out the skills I expect to learn from the bootcamp-->
-      
+
       <div class="card-group">
         <div class="card">
           <img class="card-img-top" src="" alt="Card image cap">
