--- a/index.html
+++ b/index.html
@@ -79,9 +79,13 @@
           
           <div class="row">
             <div class="col-lg-4">
-              <svg class="bd-placeholder-img rounded-circle" width="100" height="100"> <!--probs change this to imag and put in an image of each section-->
-                <rect width="100%" height="100%" fill=""></rect><!--Add icon pictures-->
-              </svg>
+              <div class="circleimg">
+                <i class="bi bi-at fa-5x"></i>
+
+
+              </div>
+             
+
               <h2>Heading</h2>
                 <p class="bodytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <p><a class="btn btn-primary" href="#" role="button">View Details</a></p>
