--- a/index.html
+++ b/index.html
@@ -80,11 +80,8 @@
           <div class="row">
             <div class="col-lg-4">
               <div class="circleimg">
-                <i class="bi bi-at fa-5x"></i>
-
-
+                <img src="./images/jambo pic.jpg" style="rounded-circle" width="100" height="100" >
               </div>
-             
 
               <h2>Heading</h2>
                 <p class="bodytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -92,18 +89,19 @@
           </div>
 
           <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="100" height="100">
-              <rect width="100%" height="100%" fill=""></rect><!--Add icon pictures-->
-            </svg>
+            <div class="circleimg">
+              <img src="./images/jambo pic.jpg" style="rounded-circle" width="100" height="100" >
+            </div>
+
             <h2>Heading</h2>
               <p class="bodytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
               <p><a class="btn btn-primary" href="#" role="button">View Details</a></p>
         </div>
 
         <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="100" height="100">
-            <rect width="100%" height="100%" fill=""></rect><!--Add icon pictures-->
-          </svg>
+          <div class="circleimg">
+            <img src="./images/jambo pic.jpg" style="rounded-circle" width="100" height="100" >
+          </div>
           <h2>Heading</h2>
             <p class="bodytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             <p><a class="btn btn-primary" href="#" role="button">View Details</a></p>
