--- a/index.html
+++ b/index.html
@@ -74,15 +74,12 @@
       <!--CARDS Skill section-  List out the skills I expect to learn from the bootcamp-->
 
         <div class="cardcontainer">
-
           <h1 class="myskills">My Skills</h1>
-          
           <div class="row">
             <div class="col-lg-4">
               <div class="circleimg">
-                <img src="./images/jambo pic.jpg" style="rounded-circle" width="100" height="100" >
+                <img src="./images/2.png" style="rounded-circle" width="100" height="100" >
               </div>
-
               <h2>Heading</h2>
                 <p class="bodytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <p><a class="btn btn-primary" href="#" role="button">View Details</a></p>
@@ -90,9 +87,8 @@
 
           <div class="col-lg-4">
             <div class="circleimg">
-              <img src="./images/jambo pic.jpg" style="rounded-circle" width="100" height="100" >
+              <img src="./images/3.png" style="rounded-circle" width="100" height="100" >
             </div>
-
             <h2>Heading</h2>
               <p class="bodytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
               <p><a class="btn btn-primary" href="#" role="button">View Details</a></p>
@@ -100,7 +96,7 @@
 
         <div class="col-lg-4">
           <div class="circleimg">
-            <img src="./images/jambo pic.jpg" style="rounded-circle" width="100" height="100" >
+            <img src="./images/4.png" style="rounded-circle" width="100" height="100" >
           </div>
           <h2>Heading</h2>
             <p class="bodytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
