added bullet points in skills

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul class="navbar-nav me-auto">
           <li class="nav-item active">
             <div class="profile-pic">
-                <img src="./images/Me nb JPEG.png" alt="small profile pic" >
+                <img src="./images/Me nb JPEG.png" alt="small avatar profile pic of myself" >
               </div>
               <a class="navbar-brand" href="#">Marlena Downer</a>
             <a class="nav-link" href="#"><i class="bi bi-emoji-smile"></i>Welcome</a>
@@ -62,7 +62,7 @@
                         <a class="btn btn-primary btn-lg" herf="#" role="button">Contact Me</a>
                     </div>
                         <div class="bigpicture">
-                        <img src="./images/jambo pic.jpg" id="big pic" alt="big profile-pic pic for jumbotron">
+                        <img src="./images/jambo pic.jpg" id="big pic" alt="Avatar pic of myself">
                         </div>
                     </div>
                   </div>
@@ -78,28 +78,47 @@
           <div class="row">
             <div class="col-lg-4">
               <div class="circleimg">
-                <img src="./images/2.png" style="rounded-circle" width="100" height="100" >
+                <img src="./images/2.png" style="rounded-circle" width="100" height="100" alt="HTML logo">
               </div>
-              <h2>Heading</h2>
-                <p class="bodytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+              <h2>HTML</h2>
+                <p class="bodytext">
+                  <ul>
+                    <li>Elements and Structures</li>
+                    <li>Tables</li>
+                    <li>Forms</li>
+                    <li>Semantic HTML</li>
+                  </ul>
+                </p>
                 <p><a class="btn btn-primary" href="#" role="button">View Details</a></p>
           </div>
 
           <div class="col-lg-4">
             <div class="circleimg">
-              <img src="./images/3.png" style="rounded-circle" width="100" height="100" >
+              <img src="./images/3.png" style="rounded-circle" width="100" height="100" alt="CSS logo" >
             </div>
-            <h2>Heading</h2>
-              <p class="bodytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <h2>CSS</h2>
+            <p class="bodytext">
+              <ul>
+                <li>Syntax and Selectors</li>
+                <li>Box Model/Visual Rules</li>
+                <li>Display and Positioning</li>
+                <li>Typography</li>
+              </ul></p>
               <p><a class="btn btn-primary" href="#" role="button">View Details</a></p>
         </div>
 
         <div class="col-lg-4">
           <div class="circleimg">
-            <img src="./images/4.png" style="rounded-circle" width="100" height="100" >
+            <img src="./images/4.png" style="rounded-circle" width="100" height="100" alt="Bootstrap logo" >
           </div>
-          <h2>Heading</h2>
-            <p class="bodytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <h2>Bootstrap</h2>
+          <p class="bodytext">
+            <ul>
+              <li>Linking Bootstrap to HTML</li>
+              <li>Bootstrap Docs</li>
+              <li>Utilities and Components</li>
+              <li>Bootrap Grid</li>
+            </ul></p>
             <p><a class="btn btn-primary" href="#" role="button">View Details</a></p>
       </div>
     </div>
@@ -115,7 +134,7 @@
         <div class="row">
           <div class="col-md-7">
           <a href="#">
-              <img class="img-fluid" src="./images/Horiseon.JPG"/>
+              <img class="img-fluid" src="./images/Horiseon.JPG" alt="Picture of Horiseon site"/>
           </a>
         </div>
         <div class="col-md-5">
@@ -130,7 +149,7 @@
       <div class="row">
         <div class="col-md-7">
         <a href="#">
-            <img class="img-fluid" src="./images/first portfolio.JPG"/>
+            <img class="img-fluid" src="./images/first portfolio.JPG" alt="Picture of my first HTML portfolio"/>
         </a>
       </div>
       <div class="col-md-5">
@@ -145,7 +164,7 @@
     <div class="row">
       <div class="col-md-7">
       <a href="#">
-          <img class="img-fluid" src="./images/02-portfolio-2.jpg"/>
+          <img class="img-fluid" src="./images/02-portfolio-2.jpg" alt="Picture of a coded calculator project"/>
       </a>
     </div>
     <div class="col-md-5">
@@ -160,7 +179,7 @@
   <div class="row">
     <div class="col-md-7">
     <a href="#">
-        <img class="img-fluid" src="./images/quiz.JPG"/>
+        <img class="img-fluid" src="./images/quiz.JPG" alt="Picture of a quiz banner"/>
     </a>
   </div>
   <div class="col-md-5">
@@ -179,7 +198,7 @@
         <div class="MEcontainer">
           <div class="row align-items-center">
             <div class="col-lg-5 order-lg-2">
-              <img class="img-fluid" src="./images/about me .jpg">
+              <img class="img-fluid" src="./images/about me .jpg" alt="Avatar picture of myself">
             </div>
 
             <div class="col-lg-7 order-lg-1 text-white">
