linked nav bar with sections

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             <a class="nav-link" href="#"><i class="bi bi-emoji-smile"></i>Welcome</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="bi bi-card-heading"></i>Work</a>
+            <a class="nav-link" href="#Work"><i class="bi bi-card-heading"></i>Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="bi-person"></i>About</a>
+            <a class="nav-link" href="#About"><i class="bi-person"></i>About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="bi-envelope"></i>Contact</a>
+            <a class="nav-link" href="#Contact"><i class="bi-envelope"></i>Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="bi bi-file-earmark-arrow-down"></i>Resume</a>
+            <a class="nav-link" href="#This_is_a_copy_of_my_Resume"><i class="bi bi-file-earmark-arrow-down"></i>Resume</a>
           </li>
         </ul>
       </div>
@@ -59,7 +59,7 @@
                       <p>Front End Web Developer</p>
                       <hr class="my 4" id="line">
                       <div class="intro">I’m currently taking a 16-week bootcamp in Front-End Web Development. As a resilient individual, I believe hard work pays off!</div>
-                        <a class="btn btn-primary btn-lg" herf="#" role="button">Contact Me</a>
+                        <a class="btn btn-primary btn-lg" herf="#" role="button">Projects!</a>
                     </div>
                         <div class="bigpicture">
                         <img src="./images/jambo pic.jpg" id="big pic" alt="Avatar pic of myself">
@@ -129,11 +129,11 @@
       <!--Project One-->
 
     <section class="workcontainer">
-        <h1 class="myskills">My Work</h1>
+        <h1 class="myskills"><a id="Work"></a>My Work</h1>
         
         <div class="row">
           <div class="col-md-7">
-          <a href="#">
+            <a href="#"></a>
               <img class="img-fluid" src="./images/Horiseon.JPG" alt="Picture of Horiseon site"/>
           </a>
         </div>
@@ -205,10 +205,11 @@
               <div class="p-2">
                 
                 <div class="aboutme">
-                  <h2>About Me!</h2>
+                  <h2><a id="About"></a>About Me</h2>
                   <hr class="my 4" id="line">
                   Within the 16-week Front-End Web Development course, I will learn programming interfaces (APIs), user experience design, and building and deploying modern web applications. I am learning HTML5, CSS3, Javascript, jQuery, React.js and Node. My goal is to learn and implement the skills needed to become a junior Front-End Web Developer within the current company I worked for.</p>
-                <a href="#" class="btn btn-primary"> <i class="fas fa-download"></i> Download my Resume</a> 
+                <a href="" class="btn btn-primary"> 
+                  <i class="fas fa-download"></i> Download my Resume</a><a id="This_is_a_copy_of_my_Resume">
               </div>
             </div>
           </div>
@@ -217,7 +218,7 @@
 
       <!---Footer- git icon-->
 
-      <footer class="footer bg-white">
+      <footer class="footer bg-white"><a id="Contact"></a>
         <div class="footercontainer">
           <div class="row">
             <div class="col-lg-6 h-100 text-center mx-auto">
