tried to add CV file not opening

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <img src="./images/Me nb JPEG.png" alt="small avatar profile pic of myself" >
               </div>
               <a class="navbar-brand" href="#">Marlena Downer</a>
-            <a class="nav-link" href="#"><i class="bi bi-emoji-smile"></i>Welcome</a>
+            <a class="nav-link" href="#"><i class="bi bi-house"></i>Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#Work"><i class="bi bi-card-heading"></i>Work</a>
@@ -40,7 +40,7 @@
             <a class="nav-link" href="#Contact"><i class="bi-envelope"></i>Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#This_is_a_copy_of_my_Resume"><i class="bi bi-file-earmark-arrow-down"></i>Resume</a>
+            <a class="nav-link" href="#This_is_a_copy_of_my_Resume"><i class="bi bi-file-earmark-arrow-down"></i>Resume</a>
           </li>
         </ul>
       </div>
@@ -208,8 +208,8 @@
                   <h2><a id="About"></a>About Me</h2>
                   <hr class="my 4" id="line">
                   Within the 16-week Front-End Web Development course, I will learn programming interfaces (APIs), user experience design, and building and deploying modern web applications. I am learning HTML5, CSS3, Javascript, jQuery, React.js and Node. My goal is to learn and implement the skills needed to become a junior Front-End Web Developer within the current company I worked for.</p>
-                <a href="" class="btn btn-primary"> 
-                  <i class="fas fa-download"></i> Download my Resume</a><a id="This_is_a_copy_of_my_Resume">
+                <a href="DOC/Marlena A Downer CV 2022 Front End Web.pdf" class="btn btn-primary"> 
+                  <i class="fas fa-download"></i> Download my Resume</a><a id="This_is_a_copy_of_my_Resume">
               </div>
             </div>
           </div>
