corrected errors in html file, style effect wasnt needed in the skill section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="row">
             <div class="col-lg-4">
               <div class="circleimg">
-                <img src="./images/2.png" style="rounded-circle" width="100" height="100" alt="HTML logo">
+                <img src="./images/2.png" width="100" height="100" alt="HTML logo">
               </div>
               <h2>HTML</h2>
                 <p class="bodytext">
@@ -94,7 +94,7 @@
 
           <div class="col-lg-4">
             <div class="circleimg">
-              <img src="./images/3.png" style="rounded-circle" width="100" height="100" alt="CSS logo" >
+              <img src="./images/3.png" width="100" height="100" alt="CSS logo" >
             </div>
             <h2>CSS</h2>
             <p class="bodytext">
@@ -109,7 +109,7 @@
 
         <div class="col-lg-4">
           <div class="circleimg">
-            <img src="./images/4.png" style="rounded-circle" width="100" height="100" alt="Bootstrap logo" >
+            <img src="./images/4.png" width="100" height="100" alt="Bootstrap logo" >
           </div>
           <h2>Bootstrap</h2>
           <p class="bodytext">
@@ -261,5 +261,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-</body>
+  
+  </body>
+
 </html>
