--- a/index.html
+++ b/index.html
@@ -224,9 +224,11 @@
             <div class="col-lg-6 h-100 text-center mx-auto">
               <ul class="list-inline mb-0">
                 <li class="list-inline-item mr-3">
-                  <a href="https://www.linkedin.com/in/marlena-asantewah-downer-74562213b/">
+                  <a href="https://www.linkedin.com/in/marlena-asantewah-downer-74562213b/" id="linkedin">
+
                     <i class="bi bi-linkedin fa-2x fa-fw"></i>
                   </a>
+                </a>
                 </li>
 
                 <li class="list-inline-item mr-3">
@@ -245,10 +247,8 @@
             </div>
           </div>
         </div>
-
       </footer>
     
-      
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
