readded pictures to try and make same size

--- a/index.html
+++ b/index.html
@@ -149,14 +149,13 @@
       <div class="row">
         <div class="col-md-7">
         <a href="#">
-            <img class="img-fluid" src="./images/first portfolio.JPG" alt="Picture of my first HTML portfolio"/>
+            <img class="img-fluid" src="./images/port1.JPG" alt="Picture of my first HTML portfolio"/>
         </a>
       </div>
       <div class="col-md-5">
         <h2>HTML Portfolio</h2>
         <p class="bodytext">My motivation for this project was to create my first HTML + CSS personal web portfolio. I created the portfolio to showcase the projects I have build and also have a space to which future employers can easily have access and view my projects. In creating the portfolio I wanted it to show my own creative flare and individual approach I take when coding and designing, I hope these are highlighted in the projects being showcased. While making the portfolio I learned many skills, some which stood out were: How to position elements and classes in logical order in HTML and CCS, understanding how margin/padding can effect layouts and the importance of doing a wireframe concept before starting to code.</p>
         <a class="btn btn-primary" href="https://marlenadowner.github.io/personal-portfolio/" role="button">View Portfolio</a>
-        
       </div>
     </div>
 
@@ -179,7 +178,7 @@
   <div class="row">
     <div class="col-md-7">
     <a href="#">
-        <img class="img-fluid" src="./images/quiz.JPG" alt="Picture of a quiz banner"/>
+        <img class="img-fluid" src="./images/quiz1.JPG" alt="Picture of a quiz banner"/>
     </a>
   </div>
   <div class="col-md-5">
