amended discription in work section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <a class="nav-link" href="#"><i class="bi bi-house"></i>Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#Skills"><i class="bi bi-clipboard-data"></i>My Sills</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#Work"><i class="bi bi-card-heading"></i>Work</a>
           </li>
           <li class="nav-item">
@@ -73,7 +76,7 @@
       <!--CARDS Skill section-  List out the skills I expect to learn from the bootcamp-->
 
         <div class="cardcontainer">
-          <h1 class="myskills">My Skills</h1>
+          <h1 class="myskills"><a id="Skills"></a>My Skills</h1>
           <div class="row">
             <div class="col-lg-4">
               <div class="circleimg">
@@ -165,7 +168,7 @@
       </div>
       <div class="col-md-5">
         <h2>HTML Portfolio</h2>
-        <p class="bodytext">My motivation for this project was to create my first HTML + CSS personal web portfolio. I created the portfolio to showcase the projects I have build and also have a space to which future employers can easily have access and view my projects. In creating the portfolio I wanted it to show my own creative flare and individual approach I take when coding and designing, I hope these are highlighted in the projects being showcased. While making the portfolio I learned many skills, some which stood out were: How to position elements and classes in logical order in HTML and CCS, understanding how margin/padding can effect layouts and the importance of doing a wireframe concept before starting to code.</p>
+        <p class="bodytext">My motivation for this project was to create my first HTML + CSS personal web portfolio. I created the portfolio to showcase the projects I have build and also have a space to which future employers can easily have access and view my projects.</p>
         <a class="btn btn-primary" href="https://marlenadowner.github.io/personal-portfolio/" role="button">View Portfolio</a>
       </div>
     </div>
