--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="#"><i class="bi bi-house"></i>Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Skills"><i class="bi bi-clipboard-data"></i>My Sills</a>
+            <a class="nav-link" href="#Skills"><i class="bi bi-clipboard-data"></i>Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#Work"><i class="bi bi-card-heading"></i>Work</a>
