--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         
         <div class="row">
           <div class="col-md-7">
-            <a href="#"></a>
+            <a href=""></a>
               <img class="img-fluid" src="./images/Horiseon.JPG" alt="Picture of Horiseon site"/>
           </a>
         </div>
